# eymo

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs  config.txt  cv.rs
docs/: overview.md
examples/: wandering-mouth.eymo
eymo-desktop/: Cargo.toml
eymo-desktop/src/: main.rs
eymo-img/: Cargo.toml
eymo-img/examples/: chaos.eymo  cyclops.eymo  faces.eymo  rotate-face.eymo  rotate-parts.eymo  simple-spin.eymo  tile.eymo  triclops.eymo  two-mouth-monster-tile.eymo  wandering-face.eymo  wandering-mouth.eymo
eymo-img/src/: imggpu.rs  lang.rs  lib.rs  pipeline.rs  shapes.rs  transform.rs  transform.wgsl
eymo-img/src/imggpu/: gpu.rs  resize.rs  rgb.rs  rgb.wgsl  vertex.rs
eymo-img/src/lang/: ast.rs  grammar.lalrpop
eymo-img/src/pipeline/: detection.rs  landmarks.rs  landmarks.wgsl  mediapipe_face_detection_short_range.onnx  model.rs
eymo-img/src/shapes/: polygon.rs  rect.rs  shape.rs  util.rs
eymo-wasm/: Cargo.toml
eymo-wasm/demo/: index.html
eymo-wasm/src/: img.rs  lib.rs
models/: mediapipe_face_landmark.onnx
src/: build.rs  cv.rs  imggpu.rs  lang-sandbox.md  lang.rs  main.rs  manipulation.rs  pipeline.rs  shapes.rs  transform.rs  transform.wgsl  triangulate.rs  video.rs
src/cv/: face.rs  keypoints.rs  pipeline.rs  shapes.rs
src/imggpu/: gpu.rs  resize.rs  resize.wgsl  rgb.rs  rgb.wgsl  rgb_img.wgsl  rotate.rs  rotate.wgsl  triangulate.rs  util.rs  vertex.rs
src/lang/: ast.rs  grammar.lalrpop
src/manipulation/: copy.rs  flip.rs  rotate.rs  scale.rs  swap.rs  tile.rs  util.rs
src/models/: mod.rs
src/pipeline/: detection.rs  detection.wgsl  landmarks.rs  landmarks.wgsl  model.rs  rect.rs
src/pipeline/detection/: anchors.rs
src/shapes/: npoint.rs  point.rs  polygon.rs  rect.rs  shape.rs
