[package]
name = "eymo"
version = "0.1.0"
edition = "2024"
features = [ "test" ]

[dependencies]
ab_glyph = "0.2.29"
anyhow = "1.0.98"
bytemuck = "1.23.1"
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.29.0"
flume = "0.11.1"
image = "0.25.6"
imageproc = "0.25.0"
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
ndarray = { version = "0.16.1" }
nokhwa = { version = "0.10.7", features = ["input-native", "input-jscam"] }
num_cpus = "1.16.0"
ort = { version = "=2.0.0-rc.9", features = ["ndarray", "xnnpack"] }
pollster = "0.4.0"
ratatui = "0.29.0"
robust = "1.2.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wgpu = "25.0.2"

[build-dependencies]
lalrpop = "0.22.2"
