[package]
name = "eymo-desktop"
authors = ["Jack Ratner"]
description = "Desktop application for manipulating faces on an image or video stream"
version = "0.0.0"
edition = "2024"
features = [ "test" ]
license = "MIT"
repository = "https://github.com/jackrr/eymo"

[dependencies]
eymo-img = { path = "../eymo-img" }
anyhow = "1.0.98"
bytemuck = "1.23.1"
clap = { version = "4.5.38", features = ["derive"] }
image = "0.25.6"
nokhwa = { version = "0.10.7", features = ["input-native", "input-jscam"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
pollster = "0.4.0"
