[package]
name = "eymo-img"
version = "0.1.0"
edition = "2024"
features = [ "test" ]

[dependencies]
anyhow = "1.0.98"
bytemuck = { version = "1.23.1", features = ["derive"] }
image = "0.25.6"
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
pollster = "0.4.0"
robust = "1.2.0"
tracing = "0.1.41"
tract-onnx = "0.21.13"
wgpu = "24.0.5"

[build-dependencies]
lalrpop = "0.22.2"
